Ajout et modification des matchs

--- a/smartchUWP/View/Tournaments/AddMatch.xaml
+++ b/smartchUWP/View/Tournaments/AddMatch.xaml
@@ -18,11 +18,11 @@
     </Page.Resources>
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button Content="Ajouter" Command="{Binding CommandAjouterMatch}"/>
+        <Button Content="Enregistrer" Command="{Binding CommandAjouterMatch}"/>
         <TextBlock Text="Ajouter un match"/>
         <ComboBox Header="Joueur 1" ItemsSource="{Binding ListeJoueur1}" ItemTemplate="{StaticResource ListeUserTemplate}" SelectedItem="{Binding SelectedJoueur1, Mode=TwoWay}"/>
         <ComboBox Header="Joueur 2" ItemsSource="{Binding ListeJoueur2}" ItemTemplate="{StaticResource ListeUserTemplate}" SelectedItem="{Binding SelectedJoueur2, Mode=TwoWay}"/>
-        <TextBox Header="Lieu" Text=""/>
+        <TextBox Header="Lieu" Text="{Binding LieuMatch, Mode=TwoWay}"/>
         <TimePicker Header="Heure prévue" Time="{Binding HeurePrevue, Mode=TwoWay}"/>
         <ComboBox Header="Arbitre" ItemsSource="{Binding AllArbitre}" ItemTemplate="{StaticResource ListeUserTemplate}" SelectedItem="{Binding SelectedArbitre, Mode=TwoWay}"/>
     </StackPanel>
