--- a/smartchUWP/View/MainPage.xaml
+++ b/smartchUWP/View/MainPage.xaml
@@ -50,7 +50,7 @@
                              Margin="12,0"/>
         </NavigationView.PaneFooter>
 
-        <Frame Content="{Binding ContentPage}" x:Name="ContentFrame"  Margin="24">
+        <Frame x:Name="ContentFrame"  Margin="24">
             <Frame.ContentTransitions>
                 <TransitionCollection>
                     <NavigationThemeTransition/>
