--- a/smartchUWP/View/Login.xaml
+++ b/smartchUWP/View/Login.xaml
@@ -6,18 +6,56 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    xmlns:gif="using:XamlAnimatedGif"
     DataContext="{Binding Source={StaticResource Locator} , Path=Login}"
     >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel HorizontalAlignment="Center" 
+                    VerticalAlignment="Center" 
+                    Visibility="{Binding IsNotChargement , Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}">
+            <Border Background="{StaticResource ErrorBackgroundColor}">
+                <TextBlock Text="Vos identifiants semblent incorrect" 
+                           Visibility="{Binding IsErrorConnection, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                           Foreground="White" 
+                           Padding="20,10,0,10"/>
+            </Border>
             <TextBlock Text="Login" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBlock Name="TextErreur" Text="Erreur lors de la connexion" Visibility="Collapsed" />
-            <TextBox x:Name="Email" Header="Email" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="EmailNameOrAddress" Text="{Binding Email}" />
-            <PasswordBox x:Name="Password" Header="Password" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Password" Password="{Binding Password}" />
-            <Button Content="Log in " Margin="0,24" Command="{Binding CommandLogin}"/>
-            <Button Content="Register" Margin="0,24" Command="{Binding CommandNavigateRegister}"/>
+            <TextBox x:Name="Email" 
+                     Header="Email" 
+                     Margin="0,24,0,0" 
+                     MaxLength="50" 
+                     Width="400" 
+                     HorizontalAlignment="Left" 
+                     InputScope="EmailSmtpAddress" 
+                     Text="{Binding Email, Mode=TwoWay}" />
+            <PasswordBox x:Name="Password" 
+                         Header="Password" 
+                         Margin="0,24,0,0" 
+                         MaxLength="50" 
+                         Width="400" 
+                         HorizontalAlignment="Left" 
+                         InputScope="Password" 
+                         Password="{Binding Password, Mode=TwoWay}" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Content="Me connecter" Margin="0,24" Command="{Binding CommandLogin}" HorizontalAlignment="left"/>
+                <Button Content="Spectateur " Margin="0,24" Command="{Binding CommandLogin}" Grid.Column="1" HorizontalAlignment="Center"/>
+                <Button Content="M'inscrire" Margin="0,24" Command="{Binding CommandNavigateRegister}" Grid.Column="2" HorizontalAlignment="Right"/>
+            </Grid>
+           
            
         </StackPanel>
+        <Grid Visibility="{Binding IsChargement , Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}" >
+            <Image gif:AnimationBehavior.SourceUri="ms-appx:////Assets/gifs/ping-loader.gif" 
+                   Height="200px" 
+                   Width="200px" 
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Center"/>
+        </Grid>
     </Grid>
 </Page>
