--- a/smartchUWP/View/Membres/Membres.xaml
+++ b/smartchUWP/View/Membres/Membres.xaml
@@ -33,7 +33,7 @@
                 <StackPanel Grid.Column="1">
                     <TextBlock  Text="{Binding Name}"/>
                     <TextBlock  Text="{Binding FirstName}"/>
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal" BorderBrush="Black">
                         <TextBlock  Text="{Binding Birthday, Converter={StaticResource DateTimeToAgeConverter}}"/>
                         <TextBlock Text=" ans"/>
                     </StackPanel>
