--- a/smartchUWP/View/Register.xaml
+++ b/smartchUWP/View/Register.xaml
@@ -5,20 +5,79 @@
     xmlns:local="using:smartchUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding Source={StaticResource Locator} , Path=Register}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel>
-            <TextBlock Text="User enregistré" Name="messageOk" Visibility="Collapsed"/>
-            <TextBlock Text="Error" Name="messageNotOk" Visibility="Collapsed"/>
-            <TextBlock Text="New Customer" Style="{StaticResource TitleTextBlockStyle}"/>
-            <TextBox x:Name="Email" Header="Email" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="EmailNameOrAddress" />
-            <PasswordBox x:Name="Password" Header="Password" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Password" />
-            <PasswordBox x:Name="ConfirmPassword" Header="Confirm Password" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left" InputScope="Password" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="3*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Visibility="{Binding IsErrorConnexion, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    Background="{StaticResource ErrorBackgroundColor}"
+                    Padding="20,20,20,20"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <TextBlock Text="L'adresse mail n'est pas valide" 
+                       Foreground="White"
+                       Visibility="{Binding IsEmailNotValid, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Cette adresse mail existe déjà" 
+                       Foreground="White"
+                       Visibility="{Binding IsDuplicateUserName, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins 6 caractère" 
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordTooShort, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins un caractère qui n'est ni un chiffre ni une lettre"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordRequiresNonAlphanumeric, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins un chiffre"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordRequiresDigit, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins une minuscule"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordRequiresLower, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins une majuscule"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordRequiresUpper, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Le mot de passe doit contenir au moins une lettre différente"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordRequiresUniqueChars, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="Les deux mots de passe ne correspondent pas"
+                       Foreground="White"
+                       Visibility="{Binding IsPasswordConfirmEquals, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+        </StackPanel>
+        
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Padding="0,20, 0, 0">
+           
+            <TextBlock Text="M'inscrire" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBox Header="Email" 
+                     Text="{Binding Email, Mode=TwoWay}"
+                     Margin="0,24,0,0" 
+                     MaxLength="50" 
+                     Width="400" 
+                     
+                     InputScope="EmailSmtpAddress" />
+            <PasswordBox Header="Password" 
+                         Password="{Binding Password, Mode=TwoWay}"
+                         Margin="0,24,0,0" 
+                         MaxLength="50" 
+                         Width="400" 
+                         
+                         InputScope="Password" />
+            <PasswordBox Header="Confirm Password" 
+                         Password="{Binding PasswordConfirm, Mode=TwoWay}"
+                         Margin="0,24,0,0" 
+                         MaxLength="50" 
+                         Width="400"
+                         
+                         InputScope="Password" />
             
             <StackPanel Orientation="Horizontal">
-                <Button Content="Save" Margin="0,24" Click="SaveButton_Click"/>
-                <Button Content="Clear" Margin="24" Click="CancelButton_Click"/>
+                <Button Content="Save" Margin="0,24" Command="{Binding CommandSaveNewAccount}"/>
+                <Button Content="Clear" Margin="24" Command="{Binding CommandClear}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
