Système de gestion des erreurs

--- a/smartchUWP/View/Clubs/Clubs.xaml
+++ b/smartchUWP/View/Clubs/Clubs.xaml
@@ -21,7 +21,10 @@
         <TextBlock Grid.Column="0" HorizontalAlignment="Left" Text="Mes Clubs" />
         <Button Grid.Column="1" HorizontalAlignment="Right" Content="Ajouter" Command="{Binding CmdNavigateAddClub}" />
         <ListView ItemsSource="{Binding Clubs}" Name="ListeClub" ItemTemplate="{StaticResource ClubsList}" Grid.Row="1"  Margin="0,0,30,0"/>
-        <StackPanel Orientation="Vertical"  Grid.Column="1" Grid.Row="1" DataContext="{Binding ElementName=ListeClub,Path=SelectedItem}" >
+        <StackPanel Orientation="Vertical"  
+                    Grid.Column="1" 
+                    Grid.Row="1" 
+                    DataContext="{Binding ElementName=ListeClub,Path=SelectedItem}" >
        
         </StackPanel>
 
