--- a/smartchUWP/View/MainPage.xaml
+++ b/smartchUWP/View/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:local="using:smartchUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:gif="using:XamlAnimatedGif"
     DataContext="{Binding Source={StaticResource Locator} , Path=MainPage}"
     mc:Ignorable="d">
 
@@ -47,14 +48,24 @@
                              
                              Margin="12,0"/>
         </NavigationView.PaneFooter>
-
-        <Frame x:Name="ContentFrame"  Margin="24">
-            <Frame.ContentTransitions>
-                <TransitionCollection>
-                    <NavigationThemeTransition/>
-                </TransitionCollection>
-            </Frame.ContentTransitions>
-        </Frame>
+        <Grid>
+            <Grid Visibility="{Binding IsChargement , Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}" >
+                <Image gif:AnimationBehavior.SourceUri="ms-appx:////Assets/gifs/ping-loader.gif" 
+                       Height="200px" 
+                       Width="200px" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center"/>
+            </Grid>
+            <Frame x:Name="ContentFrame"  
+                   Margin="24"
+                   Visibility="{Binding IsNotChargement, Converter={StaticResource BooleanToVisibilityConverter}, Mode=TwoWay}">
+                <Frame.ContentTransitions>
+                    <TransitionCollection>
+                        <NavigationThemeTransition/>
+                    </TransitionCollection>
+                </Frame.ContentTransitions>
+            </Frame>
+        </Grid>
 
     </NavigationView>
 </Page>
