--- a/smartchUWP/View/Clubs/Clubs.xaml
+++ b/smartchUWP/View/Clubs/Clubs.xaml
@@ -20,14 +20,65 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" HorizontalAlignment="Left" Text="Mes Clubs" />
         <Button Grid.Column="1" HorizontalAlignment="Right" Content="Ajouter" Command="{Binding CmdNavigateAddClub}" />
-        <ListView ItemsSource="{Binding Clubs}" Name="ListeClub" ItemTemplate="{StaticResource ClubsList}" Grid.Row="1"  Margin="0,0,30,0"/>
-        <StackPanel Orientation="Vertical"  
-                    Grid.Column="1" 
-                    Grid.Row="1" 
-                    DataContext="{Binding ElementName=ListeClub,Path=SelectedItem}" >
-       
-        </StackPanel>
+        <ListView ItemsSource="{Binding Clubs}" 
+                  Name="ListeClub" 
+                  ItemTemplate="{StaticResource ClubsList}" 
+                  Grid.Row="1"  
+                  Margin="0,0,30,0"
+                  SelectedItem="{Binding SelectedClub, Mode=TwoWay}"/>
+        <Border Visibility="{Binding IsSelectedClub, Converter={StaticResource BooleanToVisibilityConverter}}"
+                Grid.Column="1" 
+                Grid.Row="1" >
+            <Grid DataContext="{Binding ElementName=ListeClub,Path=SelectedItem}" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                </Grid.RowDefinitions>
+                <Border BorderBrush="{StaticResource border}" BorderThickness="0,4,0,0" Margin="0,20, 0,20">
+                    <Border BorderBrush="Gray" BorderThickness="0,0,0,2">
+                        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <Run Text="{Binding Name}" FontSize="20" TextDecorations="Underline" FontWeight="Bold" ></Run>
+                        </TextBlock>
+                    </Border>
+                </Border>
+                <StackPanel Grid.Row="1">
+                    <TextBlock HorizontalAlignment="Center" >
+                        <Run Text="Contact" FontWeight="Bold" FontSize="14"/>
+                    </TextBlock>
+                    <StackPanel Margin="20">
+                        <TextBlock >
+                            <Run Text="Téléphone mobile" Foreground="#FF9D9D9D" />
+                        </TextBlock>
+                        <TextBlock Text="{Binding Phone}"/>
+                    </StackPanel>
+                    <StackPanel Margin="20">
+                        <TextBlock >
+                            <Run Text="Email" Foreground="#FF9D9D9D" />
+                        </TextBlock>
+                        <TextBlock Text="{Binding ContactMail}"/>
+                    </StackPanel>
+                    <StackPanel Margin="20">
+                        <TextBlock >
+                            <Run Text="Adresse" Foreground="#FF9D9D9D" />
+                        </TextBlock>
+                        <TextBlock>
+                            <Run Text="{Binding Adresse.Street}"/>
+                            <Run>, </Run>
+                            <Run Text="{Binding Adresse.Number}"/>
+                            <Run> </Run>
+                            <Run Text="{Binding Adresse.Box}"/>
+                        </TextBlock>
+                        <TextBlock>
+                            <Run Text="{Binding Adresse.Zipcode}"/>
+                            <Run> </Run>
+                            <Run Text="{Binding Adresse.City}"/>
+                        </TextBlock>
+                    </StackPanel>
 
+
+                </StackPanel>
+            </Grid>
+        </Border>
     </Grid>
         
     
