--- a/smartchUWP/View/Tournaments/Matchs.xaml
+++ b/smartchUWP/View/Tournaments/Matchs.xaml
@@ -47,7 +47,13 @@
                         </Grid>
                     </Border>
                     <Border BorderBrush="{StaticResource border}" Grid.Column="1" BorderThickness="0,0,0,2">
-                        <TextBlock Text="0"/>
+                        <GridView ItemsSource="{Binding Score}">
+                            <GridView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Path=Key}"/>
+                                </DataTemplate>
+                            </GridView.ItemTemplate>
+                        </GridView>
                     </Border>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
@@ -57,7 +63,8 @@
                         <TextBlock Text="{Binding Player2.Name}" Margin="0,0,15,0"/>
                         <TextBlock Grid.Column="1" Text="{Binding Player2.FirstName}"/>
                     </Grid>
-                    <TextBlock Text="0" Grid.Column="1" Grid.Row="1"/>
+                    
+                   
                 </Grid>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
@@ -65,9 +72,9 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Text="Terrain 6"/>
-                    <TextBlock Text="En Cours" Grid.Row="1"/>
-                    <TextBlock Text="12h00" Grid.Row="2"/>
+                    <TextBlock Text="{Binding Emplacement}"/>
+                    <TextBlock Text="{Binding State}" Grid.Row="1"/>
+                    <TextBlock Text="{Binding Time}" Grid.Row="2"/>
                 </Grid>
                 <Grid Grid.Column="2">
                     <TextBlock Text="{Binding Arbitre.Name}"/>
